--- a/Mnpic/app/src/main/res/layout/fragment_feed.xml
+++ b/Mnpic/app/src/main/res/layout/fragment_feed.xml
@@ -1,17 +1,8 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             xmlns:http="http://schemas.android.com/apk/res-auto"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="com.renkun.mnpic.ui.fragment.FeedFragment"
-    >
+<com.handmark.pulltorefresh.library.PullToRefreshGridView
+    android:id="@+id/pull_refresh_grid"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:ptr="http://schemas.android.com/apk/res-auto"
+    ptr:ptrMode="both"
+    xmlns:android="http://schemas.android.com/apk/res/android"/>
 
-    <!-- TODO: Update blank fragment layout -->
-    <com.handmark.pulltorefresh.library.PullToRefreshGridView
-        xmlns:ptr="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/pull_refresh_grid"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        ptr:ptrMode="both"
-        />
-</FrameLayout>
