--- a/Mnpic/app/src/main/res/layout/fragment_classify_item.xml
+++ b/Mnpic/app/src/main/res/layout/fragment_classify_item.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:fresco="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="4dp">
-
+                android:layout_margin="10dp"
+                xmlns:fresco="http://schemas.android.com/apk/res-auto">
     <com.facebook.drawee.view.SimpleDraweeView
+        android:padding="10dp"
         android:id="@+id/item_pic"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:scaleType="fitStart"
+        android:minHeight="200dp"
         fresco:placeholderImage="@drawable/qq"
         />
-
-    <TextView
-        android:id="@+id/item_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
