--- a/Mnpic/app/src/main/res/layout/fragment_feed.xml
+++ b/Mnpic/app/src/main/res/layout/fragment_feed.xml
@@ -4,5 +4,6 @@
     android:layout_width="match_parent"
     xmlns:ptr="http://schemas.android.com/apk/res-auto"
     ptr:ptrMode="both"
+    android:layout_margin="14dp"
     xmlns:android="http://schemas.android.com/apk/res/android"/>
 
