--- a/Mnpic/app/src/main/res/values/colors.xml
+++ b/Mnpic/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorTabLayout">#03BCD4</color>
+    
+    <color name="colorWhite">#ffffff</color>
 
 
 </resources>
