--- a/Mnpic/app/src/main/res/layout/activity_details_classify.xml
+++ b/Mnpic/app/src/main/res/layout/activity_details_classify.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -18,18 +17,10 @@
             android:layout_alignParentLeft="true"
             android:background="@drawable/flower"
             />
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tab_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginRight="10dp"
-            android:layout_alignParentRight="true"
-            />
-
     </RelativeLayout>
-    <android.support.v4.view.ViewPager
-        android:id="@+id/view_pager"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    <FrameLayout
+        android:id="@+id/fragment_details"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
 </LinearLayout>
