--- a/Mnpic/app/src/main/res/layout/fragment_classify.xml
+++ b/Mnpic/app/src/main/res/layout/fragment_classify.xml
@@ -7,8 +7,11 @@
     <!-- TODO: Update blank fragment layout -->
     <GridView
         android:id="@+id/classify_gride"
-        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        />
 
 </FrameLayout>
