--- a/Mnpic/app/src/main/res/values/colors.xml
+++ b/Mnpic/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorTabLayout">#03BCD4</color>
     
     <color name="colorWhite">#ffffff</color>
+    <color name="colorGray">#44777777</color>
 
 
 </resources>
