--- a/Mnpic/app/src/main/res/layout/fragment_classify_item.xml
+++ b/Mnpic/app/src/main/res/layout/fragment_classify_item.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
                 android:paddingBottom="10dp"
-                xmlns:fresco="http://schemas.android.com/apk/res-auto">
-    <com.facebook.drawee.view.SimpleDraweeView
+    >
+
+    <ImageView
         android:id="@+id/item_pic"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="fitStart"
-        android:minHeight="200dp"
-        fresco:placeholderImage="@drawable/qq"
+        android:layout_width="match_parent"
+        android:layout_height="175dp"
+        android:scaleType="centerCrop"
         />
     <TextView
         android:id="@+id/item_text"
