--- a/Mnpic/app/src/main/res/values/colors.xml
+++ b/Mnpic/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#ff4444</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorTabLayout">#03BCD4</color>
+
+
     
     <color name="colorWhite">#ffffff</color>
     <color name="colorGray">#44777777</color>
