--- a/Mnpic/app/src/main/res/layout/activity_main.xml
+++ b/Mnpic/app/src/main/res/layout/activity_main.xml
@@ -8,28 +8,29 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="5dp"
         >
-        <ImageButton
+        <ImageView
             android:id="@+id/fabBtn"
             android:layout_width="?attr/actionBarSize"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
             android:layout_alignParentLeft="true"
-            android:background="@drawable/flower"
+            android:clickable="true"
+            android:src="@drawable/flower"
             />
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginRight="10dp"
+            app:tabIndicatorColor="#ff4444"
             android:layout_alignParentRight="true"
             />
 
     </RelativeLayout>
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </LinearLayout>
