--- a/Mnpic/app/src/main/res/layout/fragment_classify.xml
+++ b/Mnpic/app/src/main/res/layout/fragment_classify.xml
@@ -9,9 +9,8 @@
         android:id="@+id/classify_gride"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:horizontalSpacing="2dp"
+        android:verticalSpacing="2dp"
         />
 
 </FrameLayout>
