--- a/Mnpic/app/src/main/res/layout/fragment_feed.xml
+++ b/Mnpic/app/src/main/res/layout/fragment_feed.xml
@@ -4,9 +4,7 @@
     android:layout_width="match_parent"
     xmlns:ptr="http://schemas.android.com/apk/res-auto"
     ptr:ptrMode="both"
-    android:paddingTop="10dp"
-    android:layout_marginTop="16dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
+    android:verticalSpacing="2dp"
+    android:horizontalSpacing="2dp"
     xmlns:android="http://schemas.android.com/apk/res/android"/>
 
