--- a/Mnpic/app/src/main/res/layout/fragment_hot_item.xml
+++ b/Mnpic/app/src/main/res/layout/fragment_hot_item.xml
@@ -2,16 +2,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="5dp"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:paddingBottom="10dp"
+                android:paddingBottom="5dp"
     >
     <ImageView
         android:id="@+id/item_pic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="fitCenter"
+        android:minHeight="220dp"
         android:adjustViewBounds="true" />
+    <TextView
+        android:id="@+id/item_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/item_pic"
+        android:layout_alignTop="@+id/item_pic"
+        android:textColor="@color/colorWhite"
+        android:textSize="25sp"/>
 
 </RelativeLayout>
