--- a/Mnpic/app/src/main/res/layout/fragment_classify.xml
+++ b/Mnpic/app/src/main/res/layout/fragment_classify.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
@@ -12,5 +12,14 @@
         android:horizontalSpacing="2dp"
         android:verticalSpacing="2dp"
         />
+    <LinearLayout
+        android:id="@+id/adLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+    </LinearLayout>
 
-</FrameLayout>
+
+</RelativeLayout>
