--- a/Mnpic/app/src/main/res/layout/fragment_feed.xml
+++ b/Mnpic/app/src/main/res/layout/fragment_feed.xml
@@ -1,10 +1,19 @@
-<com.handmark.pulltorefresh.library.PullToRefreshGridView
-    android:id="@+id/pull_refresh_grid"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    xmlns:ptr="http://schemas.android.com/apk/res-auto"
-    ptr:ptrMode="both"
-    android:verticalSpacing="2dp"
-    android:horizontalSpacing="2dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:http="http://schemas.android.com/tools"
+                android:id="@+id/relativ"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorWhite">
+
+    <com.handmark.pulltorefresh.library.PullToRefreshGridView
+        android:id="@+id/pull_refresh_grid"
+        xmlns:ptr="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:horizontalSpacing="2dp"
+        android:verticalSpacing="2dp"
+        ptr:ptrMode="both"
+        />
+
+</RelativeLayout>
 
