--- a/Mnpic/app/src/main/res/layout/activity_welcom.xml
+++ b/Mnpic/app/src/main/res/layout/activity_welcom.xml
@@ -10,7 +10,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/pic_1"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop"
+            android:layout_marginBottom="70dp"/>
 
         <LinearLayout
             android:id="@+id/linic"
@@ -25,12 +26,12 @@
                 android:background="@drawable/flower"
                 android:scaleType="centerCrop"
                 android:layout_width="50dp"
-                android:layout_height="50dp"/>
+                android:layout_height="40dp"/>
             <TextView
                 android:layout_gravity="center_vertical"
                 android:text="美女图片"
                 android:layout_width="wrap_content"
-                android:layout_height="50dp"/>
+                android:layout_height="40dp"/>
         </LinearLayout>
 
             <TextView
