--- a/Mnpic/app/src/main/res/layout/fragment_classify_item.xml
+++ b/Mnpic/app/src/main/res/layout/fragment_classify_item.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-    >
-
+                android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/item_pic"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
+        android:layout_height="180dp"
         android:scaleType="centerCrop"
         />
-
     <TextView
         android:id="@+id/item_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/item_pic"
+        android:background="@color/colorGray"
         android:gravity="center_horizontal"
         android:textColor="@color/colorWhite"
-        android:background="@color/colorGray"
-        android:textSize="14sp"
-        android:layout_alignBottom="@id/item_pic"/>
+        android:textSize="14sp"/>
 </RelativeLayout>
