--- a/Mnpic/app/src/main/res/layout/activity_details_classify.xml
+++ b/Mnpic/app/src/main/res/layout/activity_details_classify.xml
@@ -8,9 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginBottom="1dp"
         >
         <ImageView
             android:id="@+id/fabBtn"
@@ -20,13 +20,17 @@
             />
         <TextView
             android:id="@+id/title"
-            android:layout_marginLeft="10dp"
-            android:textSize="16sp"
+            android:layout_marginLeft="17dp"
+            android:textSize="21sp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             />
     </LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/colorLine"/>
     <FrameLayout
         android:id="@+id/fragment_details"
         android:layout_width="match_parent"
