--- a/Mnpic/app/src/main/res/layout/activity_main.xml
+++ b/Mnpic/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginBottom="2dp"
         >
         <ImageView
             android:id="@+id/fabBtn"
@@ -29,6 +29,11 @@
             />
 
     </RelativeLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/colorLine"/>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
