--- a/Mnpic/app/src/main/res/layout/activity_photo_details_item.xml
+++ b/Mnpic/app/src/main/res/layout/activity_photo_details_item.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <ImageView
-        android:id="@+id/pic_item"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
+              android:layout_height="match_parent"
+              android:background="@color/colorPrimaryDark">
+    <uk.co.senab.photoview.PhotoView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/iv_photo"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
 
 </LinearLayout>
