--- a/Mnpic/app/src/main/res/layout/fragment_classify_item.xml
+++ b/Mnpic/app/src/main/res/layout/fragment_classify_item.xml
@@ -10,11 +10,12 @@
         />
     <TextView
         android:id="@+id/item_text"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="1dp"
         android:layout_alignBottom="@id/item_pic"
-        android:background="@color/colorGray"
         android:gravity="center_horizontal"
         android:textColor="@color/colorWhite"
-        android:textSize="14sp"/>
+        android:textSize="16sp"/>
 </RelativeLayout>
