--- a/Mnpic/app/src/main/res/values/colors.xml
+++ b/Mnpic/app/src/main/res/values/colors.xml
@@ -4,8 +4,9 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorTabLayout">#03BCD4</color>
-    <color name="colorWhite">#ffffff</color>
+    <color name="colorWhite">#f5f5f5</color>
     <color name="colorGray">#44777777</color>
+    <color name="colorLine">#ccc</color>
 
     <color name="color_0">#f69988</color>
     <color name="color_1">#f48fb1</color>
