--- a/Mnpic/app/src/main/res/layout/fragment_hot_item.xml
+++ b/Mnpic/app/src/main/res/layout/fragment_hot_item.xml
@@ -9,14 +9,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="220dp"
+        android:scaleType="centerCrop"
         android:adjustViewBounds="true" />
-    <TextView
-        android:id="@+id/item_time"
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal"
         android:layout_alignLeft="@+id/item_pic"
-        android:layout_alignTop="@+id/item_pic"
-        android:textColor="@color/colorWhite"
-        android:textSize="25sp"/>
+        android:layout_alignTop="@+id/item_pic">
+        <TextView
+            android:id="@+id/item_time_day"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:textColor="@color/colorWhite"
+            android:textSize="30sp"/>
+        <TextView
+            android:id="@+id/item_time_month"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorWhite"
+            android:textSize="18sp"/>
+    </LinearLayout>
 
 </RelativeLayout>
