--- a/Mnpic/app/src/main/res/xml/preference.xml
+++ b/Mnpic/app/src/main/res/xml/preference.xml
@@ -27,6 +27,10 @@
             android:title="版本"
             android:defaultValue="false"/>
         <Preference
+            android:key="news"
+            android:title="检查更新"
+            android:defaultValue="false"/>
+        <Preference
             android:key="Statement"
             android:title="声明"/>
     </PreferenceCategory>
