--- a/Mnpic/app/src/main/res/layout/activity_photo_details_item.xml
+++ b/Mnpic/app/src/main/res/layout/activity_photo_details_item.xml
@@ -3,7 +3,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/colorPrimaryDark">
+			  android:background="#e22d2d2d">
     <uk.co.senab.photoview.PhotoView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/iv_photo"
