--- a/Mnpic/app/src/main/res/layout/activity_welcom.xml
+++ b/Mnpic/app/src/main/res/layout/activity_welcom.xml
@@ -10,24 +10,26 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true">
         <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
             android:scaleType="centerInside"
-            android:src="@drawable/ic_launcher"
+            android:background="@drawable/ic_launcher"
             />
         <TextView
             android:text="美女图片"
             android:gravity="bottom"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:layout_margin="5dp"
+            android:textSize="20sp"
+            android:textColor="#333"
+            android:layout_marginBottom="2dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"/>
         <TextView
             android:text=" 2015-2016"
-            android:textSize="18sp"
+            android:textSize="13sp"
             android:gravity="bottom"
-            android:layout_marginBottom="5dp"
+            android:textStyle="italic"
+            android:layout_marginBottom="2dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"/>
     </LinearLayout>
