--- a/Mnpic/app/src/main/res/layout/activity_photo_details.xml
+++ b/Mnpic/app/src/main/res/layout/activity_photo_details.xml
@@ -71,5 +71,12 @@
             />
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/appx_banner_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" >
+    </RelativeLayout>
+
 
 </RelativeLayout>
