--- a/Mnpic/app/src/main/res/layout/fragment_feed.xml
+++ b/Mnpic/app/src/main/res/layout/fragment_feed.xml
@@ -4,6 +4,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorWhite">
+    <ProgressBar
+        android:id="@+id/load_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
 
     <com.handmark.pulltorefresh.library.PullToRefreshGridView
         android:id="@+id/pull_refresh_grid"
