--- a/Mnpic/app/src/main/res/layout/fragment_pic_item.xml
+++ b/Mnpic/app/src/main/res/layout/fragment_pic_item.xml
@@ -1,20 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
                 >
 
     <ImageView
         android:id="@+id/item_pic"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
+        android:layout_height="wrap_content"
+        android:minHeight="220dp"
         android:scaleType="centerCrop"
         />
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal"
+        android:layout_alignLeft="@+id/item_pic"
+        android:layout_alignTop="@+id/item_pic">
+        <TextView
+            android:id="@+id/item_time_day"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:textColor="@color/colorWhite"
+            android:textSize="30sp"/>
+        <TextView
+            android:id="@+id/item_time_month"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorWhite"
+            android:textSize="18sp"/>
+    </LinearLayout>
     <TextView
-        android:id="@+id/item_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
+        android:layout_margin="5dp"
+        android:id="@+id/pic_size"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textColor="@color/colorWhite"
+        android:layout_alignRight="@+id/item_pic"
+        android:layout_alignBottom="@+id/item_pic"
+        />
 </RelativeLayout>
